--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=sbootsecurity
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=root
+spring.datasource.password=${DB_ROOT_PASSWORD}
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.security.user.password=${SECURITY_PASSWORD}
+
+
+
+application.security.jwt.secret-key=${SECURITY_JWT_SECRET_KEY}
+application.security.jwt.expiration=${TIME_EXPIRATION_TOKEN}
+application.security.jwt.refresh-token.expiration=${TIME_REFRESH_TOKEN}
